--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin Costa - Landing</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@200;400&family=Roboto+Slab:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title>Austin Costa - Software Engineer</title>
 </head>
 <body>
     
+    <!-- Header/Navigation Menu -->
+    <header>
+        <nav>
+            <ul class="nav-list">
+                <li class="nav-item">Austin Costa</li>
+                <li class="nav-item"><a href="#home">Home</a></li>
+                <li class="nav-item"><a href="#about">About</a></li>
+                <li class="nav-item"><a href="#projects">Projects</a></li>
+                <li class="nav-item"><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+        <!-- About Section -->
+        <section id="about" class="about">
+            <div class="education">
+                
+            </div>
+        </section>
+
+        <!-- Project Section -->
+        <section id="projects" class="projects">
+
+        </section>
+
+        <section id="contact" class="contact">
+            <!-- TODO: Add clickable LinkedIn and GitHub icons here!!! -->
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
