Add about section and some basic styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@200;400&family=Roboto+Slab:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5d2b303e23.js" crossorigin="anonymous"></script>
     <title>Austin Costa - Software Engineer</title>
 </head>
 <body>
@@ -29,8 +30,51 @@
 
         <!-- About Section -->
         <section id="about" class="about">
-            <div class="education">
-                
+            <div class="about-heading">
+                <h3>Education</h3>
+                <hr>
+            </div>
+            <div class="about-item">
+                <h4>
+                    Western Governors University <br>
+                    <em>Bachelor of Science - Software Engineering</em>
+                </h4>
+                <p><em>July 2023 - Still attending</em></p>
+            </div>
+            <div class="about-item">
+                <h4>
+                    Cincinnati State Technical and Community College <br>
+                    <em>Associate of Applied Science - Software Development</em>
+                </h4>
+                <p><em>January 2021 - December 2022 GPA:4.0</em></p>
+                <ul>
+                    <li>Summa Cum Laude</li>
+                    <li>Phi Theta Kappa Honor Society</li>
+                </ul>
+            </div>
+            <div class="about-heading">
+                <h3>About Me</h3>
+                <hr>
+            </div>
+            <div class="about-item">
+                <p>
+                    Hello! My name is Austin Costa and I enjoy solving problems with code.
+                    My interest and passion for programming grew out of a curiosity about programming 
+                    when I first began with C# and tinkering with the Unity game engine — I ended up learning 
+                    a lot about object-oriented priciples and quickly became infatuated with C# as a language, 
+                    and subsequently I start toying with other languages and frameworks as well. This passion 
+                    technology and problem-solving led me toward pursuing a formal education in Software Development. 
+                    <br>
+                    <br>
+                    Fast-forward to today and I've completed my Associate of Applied Science in Software Development.
+                    I gained a valuable foundation in the best practices surrounding software design and development 
+                    and I even had the privledge of interning for <a href="https://www.cinfin.com/" target="_blank">
+                    The Cincinnati Insurance Companies</a> where I was a Software Development intern for the Management 
+                    Liability department's SCRUM team. As an Intern I did a lot of backend programming in C#, creating, updating and 
+                    parsing XML schema as well as writing SQL scripts.
+                    <br>
+                    <br>
+                </p>
             </div>
         </section>
 
