--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
 </head>
 <body>
     
-    <!-- Header/Navigation Menu -->
-    <header>
-        <nav>
-            <ul class="nav-list">
-                <li class="nav-item">Austin Costa</li>
-                <li class="nav-item"><a href="#home">Home</a></li>
-                <li class="nav-item"><a href="#about">About</a></li>
-                <li class="nav-item"><a href="#projects">Projects</a></li>
-                <li class="nav-item"><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Navigation Menu -->
+    <nav id="navbar" class="nav">
+        <ul class="nav-list">
+            <li class="nav-item">Austin Costa</li>
+            <li class="nav-item"><a href="#home">Home</a></li>
+            <li class="nav-item"><a href="#about">About</a></li>
+            <li class="nav-item"><a href="#projects">Projects</a></li>
+            <li class="nav-item"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
     <main>
 
@@ -91,5 +89,8 @@
     <footer>
 
     </footer>
+    <!-- jQuery and script.js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
