--- a/index.html
+++ b/index.html
@@ -14,19 +14,34 @@
 <body>
     
     <!-- Navigation Menu -->
-    <nav id="navbar" class="nav">
-        <ul class="nav-list">
-            <li class="nav-item">Austin Costa</li>
-            <li class="nav-item"><a href="#home">Home</a></li>
-            <li class="nav-item"><a href="#about">About</a></li>
-            <li class="nav-item"><a href="#projects">Projects</a></li>
-            <li class="nav-item"><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <header class="header">
+        <nav class="navbar">
+            <a href="#" class="nav-logo">Austin Costa.</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+    </header>
 
     <main>
 
-        
+
 
     </main>
     <footer>
