--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     
-    <!-- Navigation Menu -->
+    <!-- Navigation/Hamburger Menu -->
     <header class="header">
         <nav class="navbar">
-            <a href="#" class="nav-logo">Austin Costa.</a>
+            <a href="#" class="nav-logo">Austin Costa</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#" class="nav-link">Home</a>
