Add profile image and adjust nav styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!-- Navigation/Hamburger Menu -->
     <header class="header">
         <nav class="navbar">
-            <a href="#" class="nav-logo">Austin Costa</a>
+            <a href="#" class="nav-logo">
+                <img src="images/profile.jpg" alt="Profile Picture">Austin Costa
+            </a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#" class="nav-link">Home</a>
