Add Welcome section with styling and custom button styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="#welcome" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">About</a>
@@ -43,7 +43,12 @@
 
     <main>
 
-
+        <!-- Welcome Section -->
+        <section id="welcome" class="welcome-section"> 
+            <h1 class="welcome-heading">Hey, I'm Austin Costa</h1>
+            <p class="welcome-line">A Software Developer who's passionate about developing creative and efficient solutions to real-world problems.</p>
+            <a href="./#projects" class="welcome-btn">Projects</a>
+        </section>
 
     </main>
     <footer>
