--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
 
     <main>
 
+        <!-- Socials Sidebar -->
+        <div class="socials">
+            <div class="social-link">
+                <a href="https://github.com/AustinCosta" target="_blank" class="social"><i class="fa-brands fa-square-github fa-4x"></i></a>
+            </div>
+            <div class="social-link">
+                <a href="https://www.linkedin.com/in/austin-costa-718897213/" target="_blank" class="social"><i class="fa-brands fa-linkedin fa-4x"></i></a>
+            </div>
+        </div>
+
         <!-- Welcome Section -->
         <section id="welcome" class="welcome-section"> 
             <h1 class="welcome-heading">Hey, I'm Austin Costa</h1>
